[gd_scene load_steps=23 format=3 uid="uid://nev40qm2l1ke"]

[ext_resource type="Script" path="res://scripts/snail.gd" id="1_u11w5"]
[ext_resource type="Texture2D" uid="uid://bditpnkw5t2vv" path="res://sprites/Legacy-Fantasy - High Forest 2.3/Mob/Snail/Dead-Sheet.png" id="2_akvtc"]
[ext_resource type="Texture2D" uid="uid://d0hc3xcml4gwm" path="res://sprites/Legacy-Fantasy - High Forest 2.3/Mob/Snail/walk-Sheet.png" id="3_47h8w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ub6xh"]
size = Vector2(22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur0if"]
atlas = ExtResource("2_akvtc")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t80io"]
atlas = ExtResource("2_akvtc")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe0of"]
atlas = ExtResource("2_akvtc")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gurb6"]
atlas = ExtResource("2_akvtc")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfnxv"]
atlas = ExtResource("2_akvtc")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28oe4"]
atlas = ExtResource("2_akvtc")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muo6s"]
atlas = ExtResource("2_akvtc")
region = Rect2(288, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uym8e"]
atlas = ExtResource("2_akvtc")
region = Rect2(336, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppx50"]
atlas = ExtResource("3_47h8w")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shpk5"]
atlas = ExtResource("3_47h8w")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b4ax"]
atlas = ExtResource("3_47h8w")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_arflr"]
atlas = ExtResource("3_47h8w")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbot7"]
atlas = ExtResource("3_47h8w")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgsk1"]
atlas = ExtResource("3_47h8w")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htu4m"]
atlas = ExtResource("3_47h8w")
region = Rect2(288, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk6jk"]
atlas = ExtResource("3_47h8w")
region = Rect2(336, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yjxx4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur0if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t80io")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe0of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gurb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfnxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28oe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muo6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uym8e")
}],
"loop": false,
"name": &"damage",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppx50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shpk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b4ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arflr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbot7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgsk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htu4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk6jk")
}],
"loop": true,
"name": &"run",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvnfq"]
size = Vector2(25, 19)

[node name="Snail" type="CharacterBody2D"]
script = ExtResource("1_u11w5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 5)
shape = SubResource("RectangleShape2D_ub6xh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_yjxx4")
animation = &"damage"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, 6.5)
shape = SubResource("RectangleShape2D_nvnfq")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-120, 0)

[node name="RayCast2D2" type="RayCast2D" parent="."]
target_position = Vector2(120, 0)

[node name="RayCastSuelo" type="RayCast2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
